--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
+    "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
