--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
+    "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.9",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.6.2",
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-toastify": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
